[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/mazetrans.png" type="Texture" id=1]
[ext_resource path="res://Maze.gd" type="Script" id=2]
[ext_resource path="res://Sounds/bullethit/Wall-Hit 2.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/bullethit/Wall-Hit 4.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/bullethit/Wall-Hit 1.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/bullethit/Wall-Hit 5.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/bullethit/Wall-Hit 3.wav" type="AudioStream" id=7]

[node name="Maze" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 40.4595, 27.9896 )
polygon = PoolVector2Array( -1.63126, -9.75364, -1.18637, -6.21661, -1.18637, -5.78787, 4.37474, -5.8236, 4.52304, -4.3945, 2.86706, -4.57313, 2.86706, -3.82285, 4.35003, -3.67994, 4.39946, -3.17976, 1.95257, -3.28694, 1.77956, -5.14478, -3.65798, -5.14478, -3.65798, -6.03797, -2.12558, -5.85933, -2.10087, -8.5389, -4.9185, -8.57463, -4.89378, -7.71716, -3.50968, -7.64571, -3.3861, -6.93116, -4.7702, -6.89543, -4.9185, -4.96614, -5.80827, -4.89468, -5.85771, -8.46745, -8.9225, -8.50317, -8.9225, -7.35989, -6.84635, -7.21698, -6.79692, -6.32379, -8.97193, -6.28806, -8.87307, 4.60886, -7.09351, 4.71605, -7.11823, 5.50205, -9.02136, 5.57351, -8.97193, 7.39562, -8.97193, 7.75289, -8.3046, 7.75289, -8.20573, 8.57463, -1.77956, 8.64608, -1.80427, 5.68069, -3.58383, 5.46633, -3.63326, 3.85858, -4.99264, 3.82285, -4.94321, 6.75252, -3.2378, 6.78825, -3.2378, 7.32416, -7.63726, 7.39562, -7.56311, 6.82397, -5.73413, 6.75252, -5.68469, 3.82285, -7.61255, 3.82285, -7.58783, 3.17976, -3.36138, 3.28694, -3.06479, 4.3945, -2.71877, 4.7875, -1.92785, 4.71605, -1.77956, 5.07332, -1.35938, 5.21623, -1.33467, 8.61036, 0.494321, 8.78899, 0.494321, 9.78937, -8.32931, 9.78937, -8.40346, 9.03909, -9.58983, 9.07481, -9.96057, -9.28918, -9.12023, -9.96801 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
scale = Vector2( 42.1121, 29.9454 )
polygon = PoolVector2Array( 0.166223, -9.25016, 9.64094, -9.21676, 9.5697, 9.35034, 1.99468, 9.35034, 1.73347, 8.31512, 1.68598, 7.04615, 0.142477, 6.779, 0.0237462, 3.60656, -1.73347, 3.57317, -1.75722, 2.37098, -7.43255, 2.2708, -7.43255, -4.97572, -6.50645, -5.0425, -6.53019, -4.07408, 0.474923, -3.97389, 0.474923, -2.67153, -2.7783, -2.8051, -2.7783, -1.36916, -3.58567, -1.26897, -3.65691, -2.70492, -6.4827, -2.67153, -6.4827, 1.46934, 0.379938, 1.36916, 0.356192, 2.2708, -1.11607, 2.2708, -1.11607, 2.90528, 1.82845, 3.00547, 1.82845, -1.23558, -0.759877, -1.23558, -0.759877, -0.634487, 0.379938, -0.534305, 0.356192, 0.534305, -5.50911, 0.601093, -5.48536, -1.6697, -4.55926, -1.76989, -4.48802, -0.73467, -4.39304, -0.400729, -1.63848, -0.634487, -1.78096, -2.00364, 6.03152, -1.90346, 6.26898, -0.534305, 6.91013, -0.367335, 7.83623, -0.333941, 7.90747, 0.467517, 6.93388, 0.634487, 6.12651, 0.801458, 6.15025, 3.00547, 7.78874, 3.00547, 8.04995, 6.67881, 7.38505, 6.94597, 7.29007, 5.30966, 5.5566, 5.30966, 5.50911, 4.67517, 7.29007, 4.54159, 7.21883, 3.74014, 5.41412, 3.63995, 5.41412, 0.667881, 3.79938, 0.534305, 3.75189, -0.601093, 5.36663, -0.534305, 5.43787, -1.33576, 2.39836, -1.23558, 2.44585, 1.46934, 4.10808, 1.56952, 4.3218, 6.81239, 3.72815, 6.94597, 3.56192, 2.20401, 2.54084, 2.20401, 2.51709, 3.77353, 0.664892, 3.63995, 0.664892, 6.27808, 1.70972, 6.2113, 1.68598, 4.80875, 2.42211, 4.80875, 2.42211, 8.04797, 5.20041, 8.18155, 5.27165, 6.37827, 6.24524, 6.34487, 6.19775, 7.98118, 9.16602, 7.98118, 9.18976, 1.93686, 7.36131, 1.93686, 7.36131, 1.36916, 9.261, 1.30237, 9.23725, -1.00182, 7.52753, -1.06861, 7.45629, -2.00364, 7.14759, -2.10383, 7.17134, -2.90528, 5.58035, -3.07225, 5.69908, -3.57317, 7.97871, -3.47298, 8.09744, -2.2708, 9.11852, -2.2708, 9.16602, -4.30783, 5.53285, -4.20765, 5.41412, -5.97754, 5.2479, -6.41166, 0.213715, -6.2113, 0.0712385, -6.31148, 0.0712385, -6.91257, 5.98403, -7.14633, 6.12651, -6.44506, 6.41146, -6.41166, 6.4827, -5.57681, 9.04728, -5.44323, 9.261, -7.881, 8.19242, -7.98118, 8.09744, -6.11111, 7.21883, -6.07772, 7.19508, -7.91439, 0.166223, -7.94779 )

[node name="BulletHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="BulletHit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="BulletHit3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="BulletHit4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="BulletHit5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
